# johnxu21.github.io

./: .gitignore  Gemfile  _config.yml  index.md
_data/: menu.yml
_sass/: _layout.scss
_site/: feed.xml  index.html  old_readme.html  sitemap.xml
_site/about/: index.html
_site/blog/: index.html
_site/css/: main.css
_site/cv/: index.html
_site/evol/: index.html
_site/files/: Refactoring_Assistants.pptx
_site/miscellany/: index.html
_site/notebook/: index.html
_site/resources/: index.html
_site/service/: index.html
_site/students/: index.html
_site/teaching/: index.html
cv/: cv.md
evol/: research.md
evol/join/: join.md
evol/projects/: projects.md
evol/publications/: publications.md
evol/students/: students.md
evol/talks/: talks.md
files/: Refactoring_Assistants.pptx  list.txt
files/472Files/: PlanTmpl.xlsx  TimeSheet.xlsx
files/CS789_SRE/: Final_Evaluation_Report_CS-789.docx  Intermetdiate_Evaluation_Report_Template.docx  Pre-conditions_Report_Evaluation_Template.docx  ~$nal_Evaluation_Report_CS-789.docx
files/spdd/: Final_Report_Evaluation_Form_Blank.docx
images/: Logo.pptx
service/: service.md
students/: students.md
teaching/: teaching.md
teaching/CS472/: CS472.md
teaching/CS472-Spring2023/: CS472-Spring2023.md
teaching/CS472/study_material/material/: CMakeLists.txt  Exceptions.h  cdCatalog.xml
teaching/CS472/study_material/material/loading_ttt/: loading_ttt.md
teaching/CS473-Fall2022/: CS473-Fall2022.md  Software-Reengineering.md  dynamic_analysis_testing.md  metrics_and_visualization.md  msr.md  (+4 more)
(+132 files in other folders)
